--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,13 @@ authors = ["Benoît Peccatte <benoit.peccatte@normation.com>"]
 edition = "2018"
 
 [dependencies]
-nom = "4.1.1"
+#nom = "4.1.1"
+
+[dependencies.nom]
+version = "^4.1"
+features = ["verbose-errors"]
+
+[dependencies.nom_locate]
+version = "^0.3"
+features = ["verbose-errors"]
+
