--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 version = "^4.1"
 features = ["verbose-errors"]
 
-[dependencies.nom_locate]
-version = "^0.3"
-features = ["verbose-errors"]
+#[dependencies.nom_locate]
+#version = "^0.3"
+#features = ["verbose-errors"]
 
