--- a/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
@@ -107,6 +107,7 @@ os.name.Windows2012=Windows 2012
 os.name.Windows2012R2=Windows 2012R2
 os.name.Windows2016=Windows 2016
 os.name.Windows2016R2=Windows 2016R2
+os.name.Windows2019=Windows 2019
 os.name.Solaris=Solaris
 os.name.AIX=AIX
 os.name.FreeBSD=FreeBSD
