Fixes #10812: Add Linux Mint Distro

--- a/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
@@ -96,6 +96,7 @@ os.name.UnknownLinux=Other Linux
 os.name.Oracle=Oracle Linux Server
 os.name.Scientific=Scientific Linux
 os.name.Slackware=Slackware
+os.name.Mint=Mint
 os.name.WindowsXP=Windows XP
 os.name.WindowsVista=Windows Vista
 os.name.WindowsSeven=Windows Seven
