--- a/relay/sources/relayd/tests/files/relayd.conf
+++ b/relay/sources/relayd/tests/files/relayd.conf
@@ -1,20 +1,26 @@
 [general]
-nodes_list_file = "tests/nodeslist.json"
+nodes_list_file = "tests/files/nodeslist.json"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
 [processing]
-inventory.directory = "tests/inventories/"
+
+inventory.directory = "tests/tmp/inventories/"
 inventory.output = "upstream"
 inventory.catchup.frequency = 10
 inventory.catchup.limit = 50
-reporting.directory = "tests/runlogs/"
-reporting.output = "upstream"
+#inventory.retention.success = 0
+#inventory.retention.failure = 7d
+
+reporting.directory = "tests/tmp/runlogs/"
+reporting.output = "database"
 reporting.catchup.frequency = 10
 reporting.catchup.limit = 50
+#reporting.retention.success = 0
+#reporting.retention.failure = 7d
 
 [output]
-database.url = "postgres://rudder:PASSWORD@127.0.0.1/rudder"
+database.url = "postgres://rudderreports:PASSWORD@127.0.0.1/rudder"
 database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 
