fixup! Fixes #14586: Update relay component
Fixes #14586: Update relay component

--- a/relay/sources/relayd/tests/test_simple/relayd.conf
+++ b/relay/sources/relayd/tests/test_simple/relayd.conf
@@ -25,7 +25,7 @@ database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 
 [logging]
-general.level = "warning"
+general.level = "critical"
 filter.level = "trace"
 filter.components = []
 filter.nodes = []
