Fixes #14586: Update relay component (#2175)
Fixes #14586: Update relay component

--- a/relay/sources/relayd/tests/test_simple/relayd.conf
+++ b/relay/sources/relayd/tests/test_simple/relayd.conf
@@ -5,14 +5,14 @@ listen = "127.0.0.1:3030"
 
 [processing]
 
-inventory.directory = "tests/tmp/inventories/"
-inventory.output = "upstream"
+inventory.directory = "target/tmp/test_simple/"
+inventory.output = "disabled"
 inventory.catchup.frequency = 10
 inventory.catchup.limit = 50
 #inventory.retention.success = 0
 #inventory.retention.failure = 7d
 
-reporting.directory = "tests/tmp/runlogs/"
+reporting.directory = "target/tmp/test_simple/"
 reporting.output = "database"
 reporting.catchup.frequency = 10
 reporting.catchup.limit = 50
@@ -25,6 +25,7 @@ database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 
 [logging]
-general.level = "info"
-general.filter.level = "trace"
-general.filter.nodes = []
+general.level = "critical"
+filter.level = "trace"
+filter.components = []
+filter.nodes = []
