Fixes #14710: Start the Rudder relay service in post install

--- a/relay/sources/systemd/rudder-relayd.service
+++ b/relay/sources/systemd/rudder-relayd.service
@@ -4,6 +4,8 @@ After=network-online.target
 
 [Service]
 ExecStart=/opt/rudder/bin/rudder-relayd
+User=rudder
+Group=rudder
 
 [Install]
 RequiredBy=rudder-server.service
