--- a/relay/sources/relayd/tests/test_simple/relayd.conf
+++ b/relay/sources/relayd/tests/test_simple/relayd.conf
@@ -1,5 +1,6 @@
 [general]
 nodes_list_file = "tests/files/nodeslist.json"
+nodes_certs_file = "tests/keys/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
@@ -23,6 +24,8 @@ reporting.catchup.limit = 50
 database.url = "postgres://rudderreports:PASSWORD@127.0.0.1/rudder"
 database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
+upstream.user = "rudder"
+upstream.password = "password"
 
 [logging]
 general.level = "critical"
