--- a/relay/sources/relayd/tools/rudder-relayd.conf
+++ b/relay/sources/relayd/tools/rudder-relayd.conf
@@ -4,6 +4,7 @@
 [general]
 
 nodes_list_file = "/opt/rudder/etc/nodeslist.json"
+nodes_certs_file = "/opt/rudder/etc/ssl/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
@@ -11,7 +12,7 @@ listen = "127.0.0.1:3030"
 
 [processing.inventory]
 directory = "/var/rudder/inventories"
-# Can be "upstream" or "disabled
+# Can be "upstream" or "disabled"
 output = "webapp"
 
 [processing.inventory.catchup]
@@ -42,6 +43,8 @@ max_pool_size = 10
 [output.upstream]
 # Upstream relay on non-root servers
 url = "https://127.0.0.1:3030"
+user = "rudder"
+password = "password"
 
 ### Logging
 
