--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -21,8 +21,7 @@ harness = false
 #### Good
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-nom = "4.2"
-clap = "2.32"
+nom = "5.0.0-beta1"
 # Could use native lib instead, but maybe not prod-ready
 flate2 = { version = "1.0", features = ["zlib"], default-features = false }
 diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
@@ -35,20 +34,23 @@ slog-stdlog = "3.0"
 slog-atomic = "2.0"
 slog-kvfilter = "0.7"
 #### Bad (=Not widely used or <1.0)
+structopt = "0.2"
 toml = "0.5"
 inotify = "0.7"
-xz2 = "0.1"
+openssl = "0.10"
 # Disable uneeded features (udp, unix socket, etc.)
 tokio = { version = "0.1", default-features = false, features = ["fs", "io", "reactor", "rt-full"] }
 tokio-signal = "0.2"
 tokio-threadpool = "0.1"
 futures = "0.1"
 warp = "0.1"
+reqwest = "0.9"
 chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 criterion = "0.2"
 filetime = "0.2"
+tempfile = "3.0"
 
 [profile.release]
 # Smaller binaries
