Fixes #14657: Add managed/technique private files for technique editor

--- a/webapp/sources/rudder/pom.xml
+++ b/webapp/sources/rudder/pom.xml
@@ -59,7 +59,13 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
     <!-- fill-in rule templates -->
   </modules>
 
-  <dependencies/>
+  <dependencies>
+    <dependency>
+      <groupId>com.github.pathikrit</groupId>
+      <artifactId>better-files_${scala-binary-version}</artifactId>
+      <version>3.7.0</version>
+    </dependency>
+  </dependencies>
 
   <repositories>
     <repository>
