Fixes #14951: Update relay component - enable signature validation

--- a/relay/sources/relayd/Makefile
+++ b/relay/sources/relayd/Makefile
@@ -22,7 +22,7 @@ yum-dependencies:
 	yum install pkgconfig postgresql-devel openssl-devel zlib-devel asciidoc
 
 apt-dependencies:
-	apt install pkg-config libpq-dev libssl-dev zlib1g-dev asciidoc
+	apt install --no-install-recommends pkg-config libpq-dev libssl-dev zlib1g-dev asciidoc
 
 build-env:
 	curl https://sh.rustup.rs -sSf | sh
