Fixes #15037: Add reports endpoint to apache configs

--- a/relay/sources/apache/rudder-apache-relay-common.conf
+++ b/relay/sources/apache/rudder-apache-relay-common.conf
@@ -26,13 +26,10 @@ Alias /uuid /opt/rudder/etc/uuid.hive
 # WebDAV share to receive inventories
 Alias /inventories /var/rudder/inventories/incoming
 <Directory /var/rudder/inventories/incoming>
-
   DAV on
-
   AuthName "WebDAV Storage"
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav-initial
-
   Require valid-user
 
   # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
@@ -41,19 +38,15 @@ Alias /inventories /var/rudder/inventories/incoming
   <LimitExcept PUT>
     Require all denied
   </LimitExcept>
-
 </Directory>
 
 # WebDAV share to receive inventories
 Alias /inventory-updates /var/rudder/inventories/accepted-nodes-updates
 <Directory /var/rudder/inventories/accepted-nodes-updates>
-
   DAV on
-
   AuthName "WebDAV Storage"
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav
-
   Require valid-user
 
   # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
@@ -62,7 +55,23 @@ Alias /inventory-updates /var/rudder/inventories/accepted-nodes-updates
   <LimitExcept PUT>
     Require all denied
   </LimitExcept>
+</Directory>
 
+# WebDAV share to receive reports
+Alias /reports /var/rudder/reports/incoming
+<Directory /var/rudder/reports/incoming>
+  DAV on
+  AuthName "WebDAV Storage"
+  AuthType Basic
+  AuthUserFile /opt/rudder/etc/htpasswd-webdav
+  Require valid-user
+
+  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+  Include /opt/rudder/etc/rudder-networks-24.conf
+
+  <LimitExcept PUT>
+    Require all denied
+  </LimitExcept>
 </Directory>
 
 # Load relay-api
