--- a/webapp/sources/ldap-inventory/pom.xml
+++ b/webapp/sources/ldap-inventory/pom.xml
@@ -40,7 +40,7 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
   <parent>
     <groupId>com.normation</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>5.0.12-SNAPSHOT</version>
+    <version>5.0.11-BPCE</version>
   </parent>
 
   <description>
