--- a/webapp/sources/rudder-commons/pom.xml
+++ b/webapp/sources/rudder-commons/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
   <parent>
     <groupId>com.normation</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>5.0.12-SNAPSHOT</version>
+    <version>5.0.11-BPCE</version>
   </parent>
 
   <artifactId>commons-parent</artifactId>
